...
import { getSearch, GetSearchPayload } from '../api/search/getSearch';
import { CoinListItem } from '../components/CoinListItem';
import { Loading } from '../components/Loading';
import { QuerySuspense } from '../components/QuerySuspense';
import { useDebounce } from '../hooks/useDebounce';
import { RootStackParamList } from '../routes';
import { Search } from '../types/Search';

export type SearchScreenProps = NativeStackScreenProps<RootStackParamList, 'Search'>;

export default function SearchScreen(props: SearchScreenProps) {
  return (
    <QuerySuspense>
...

    navigation.setOptions({
      headerSearchBarOptions: {
        ref: searchBarRef,
        autoFocus: true, // Android only
        placement: 'stacked',
        placeholder: 'Search coins',
        onChangeText,
        onCancelButtonPress,
      },
    });
  }, [navigation]);

...
