...
}

function ChooseCurrencyInput(props: { value: string; onValueChange: (value: string) => void }) {
  const { value, onValueChange } = props;

  return (
    <Select testID="select" initialLabel="USD" selectedValue={value} onValueChange={onValueChange}>
      <SelectTrigger variant="outline" size="md">
        <SelectInput placeholder="Select option" />
        {/* TODO: this is still a bug https://github.com/gluestack/gluestack-ui/issues/1454 */}
        {/* @ts-ignore */}
        <SelectIcon mr="$3">
          <Icon as={ChevronDownIcon} />
...
        <SelectBackdrop />
        <SelectContent>
          <SelectDragIndicatorWrapper>
            <SelectDragIndicator />
          </SelectDragIndicatorWrapper>
          <SelectItem label="USD" value="usd" />
          <SelectItem testID="select-eur" label="EUR" value="eur" />
          <SelectItem label="GBP" value="gbp" />
        </SelectContent>
      </SelectPortal>
    </Select>
  );
}
...
